# rshell

./: .gitignore  Cargo.nix  Cargo.toml  crate-hashes.json  flake.nix  shell.nix
nix/devshell/: flake-module.nix
nix/rust-overlay/: flake-module.nix
src/: cli.rs  main.rs  rt.rs  spotify.rs  theme.rs  widgets.rs
src/bar/: battery.rs  hypr.rs  memory.rs  mod.rs  spotify.rs  time.rs
src/menu/: mod.rs
src/vibrancy/: README.md  mod.rs  palette.rs  settings.rs  vibrant.rs
